src/test/ui/consts/const-eval/const_panic_libcore.stderr
error: any use of this value will cause an error
  --> $DIR/const_panic_libcore.rs:15:1
   |
LL | const Z: () = panic!("cheese");
   | ^^^^^^^^^^^^^^----------------^
   |               |
   |               the evaluated program panicked at 'cheese', $DIR/const_panic_libcore.rs:15:15
   |
   = note: #[deny(const_err)] on by default
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic_libcore.rs:18:1
   |
LL | const Y: () = unreachable!();
   | ^^^^^^^^^^^^^^--------------^
   |               |
   |               the evaluated program panicked at 'internal error: entered unreachable code', $DIR/const_panic_libcore.rs:18:15
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: any use of this value will cause an error
  --> $DIR/const_panic_libcore.rs:21:1
   |
LL | const X: () = unimplemented!();
   | ^^^^^^^^^^^^^^----------------^
   |               |
   |               the evaluated program panicked at 'not yet implemented', $DIR/const_panic_libcore.rs:21:15
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to 3 previous errors

